Some UI Improvement

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,7 +7,7 @@ en:
     sports: Sports
     business: Business
     health: Health
-    entertainment: Entertainment
+    fun: Fun
     science: Science
     technology: Technology
     read: Read
