--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -7,7 +7,7 @@ pt-BR:
     sports: Esportes
     business: Negócios
     health: Saúde
-    entertainment: Entretenimento
+    fun: Diversão
     science: Ciência
     technology: Tecnologia
     read: Leia
