--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -3,7 +3,7 @@ pt-BR:
     morning_saudation: Bom Dia
     afternoon_saudation: Boa Tarde
     search_placeholder: Buscar Noticias
-    title: Destaques
+    title: Hoje
     sports: Esportes
     business: Negócios
     health: Saúde
